[tool.poetry]
name = "Dots Game"
version = "0.0.1"
description = "Классическая игра 'Точки' для двух игроков с простым интерфейсом и стратегическим геймплеем. Захватывайте территории, окружая точки соперника, и побеждайте!"
authors = [
    "Samorodova Aleksandra",
    "Nazarova Inessa", ]

package-mode = false

[tool.poetry.dependencies]
python = ">=3.12, <3.14"
mypy = "^1.15.0"
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"
pydantic = "^2.11.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[tool.black]
line-length = 120
target-version = ['py312']
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["dots"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
skip = [".venv", "venv", "build", "dist", "migrations"]
force_sort_within_sections = true
lines_after_imports = 2
combine_as_imports = true
include_trailing_comma = true

[tool.flake8]
max-line-length = 120
ignore = "E203, W503"
exclude = ".git, __pycache__, .venv"
show-source = true
